<resources>
    <string name="app_name">SpaceApp</string>

    <string name="image_view_apod">APOD_Image</string>
    <string name="text_view_title">APOD(Astronomy Picture of the Day)\n%1$s</string>
    <string name="text_view_explanation">%1$d</string>
    <string name="text_view_date">%1$d</string>
    <string name="text_view_copy">%1$d</string>


    <string name="edit_text_planet_name">Type planet or body Name</string>
    <string name="btn_search_planet">Search</string>
    <string name="text_view_planet_name">%1$d</string>

    <string name="text_view_mass">MASS (kg)</string>
    <string name="text_view_mass_value">Mass Value</string>
    <string name="text_view_mass_exponent">Mass Exponent</string>
    <string name="text_view_mass_value_value">%1$d</string>
    <string name="text_view_mass_exponent_value">%1$d</string>

    <string name="text_view_volume">VOLUME (km^3)</string>
    <string name="text_view_volume_value">Volume Value</string>
    <string name="text_view_volume_exponent">Volume Exponent</string>
    <string name="text_view_volume_value_value">%1$d</string>
    <string name="text_view_volume_exponent_value">%1$d</string>


    <string name="edit_text_Rovers">Type date(YYYY-MM-DD)</string>
    <string name="text_view_density">Density</string>
    <string name="text_view_density_value">%1$.4f g.cm^3</string>
    <string name="text_view_gravity">Gravity</string>
    <string name="text_view_gravity_value">%1$.3f m.s^2</string>
    <string name="text_view_equatorial_radius">Equatorial Radius</string>
    <string name="text_view_equatorial_radius_value">%1$.4f kms</string>
    <string name="text_view_polar_radius">Polar Radius</string>
    <string name="text_view_polar_radius_value">%1$.4f kms</string>
    <string name="text_view_sidereal_orbit">Sidereal Orbit</string>
    <string name="text_view_sidereal_orbit_value">%1$.4f days</string>
    <string name="text_view_sidereal_rotation">Sidereal Rotation</string>
    <string name="text_view_sidereal_rotation_value">%1$.4f hours</string>


    <string name="text_view_description">Search a Mars Rover \n image by Earth Date</string>
    <string name="text_view_earth_date">Earth Date</string>
    <string name="text_view_earth_date_value">%1$s</string>
    <string name="text_view_camera_type">Camera Type</string>
    <string name="text_view_camera_type_value">%1$s</string>
    <string name="text_view_landing_date">Landing Date</string>
    <string name="text_view_landing_date_value">%1$s</string>
    <string name="text_view_launch_date">Launch Date</string>
    <string name="text_view_launch_date_value">%1$s</string>
    <string name="text_view_max_date">Max Date</string>
    <string name="text_view_max_date_value">%1$s</string>
    <string name="text_view_status">Status</string>
    <string name="text_view_status_value">%1$s</string>
    <string name="text_view_total_photos">Total Photos</string>
    <string name="text_view_total_photos_value">%1$s</string>

    <string name="image_view_Rover_Photo">Mars Rovers</string>
    <string name="apod">Apod</string>
    <string name="solar_s">Solar S.</string>
    <string name="rovers">Rovers</string>

</resources>
