<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarsRoverFragment">

    <Button
        android:id="@+id/buttonSearchRover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_search_planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearchRover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRover">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewRoverDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_view_description"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewRoverPhoto">

                <TextView
                    android:id="@+id/textViewEarthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_earth_date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewLandingDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_landing_date_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewLandingDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCameraTypeValue" />

                <TextView
                    android:id="@+id/textViewCameraTypeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_camera_type_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewCameraType"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEarthDateValue" />

                <TextView
                    android:id="@+id/textViewMaxDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_max_date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLaunchDate" />

                <TextView
                    android:id="@+id/textViewMaxDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_max_date_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewMaxDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLaunchDateValue" />

                <TextView
                    android:id="@+id/textViewStatusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_status_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/Status"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMaxDateValue" />

                <TextView
                    android:id="@+id/textViewCameraType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_camera_type"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewEarthDate" />

                <TextView
                    android:id="@+id/textViewLaunchDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_launch_date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLandingDate" />

                <TextView
                    android:id="@+id/textViewLaunchDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_launch_date_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewLaunchDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLandingDateValue" />

                <TextView
                    android:id="@+id/textViewPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_total_photos"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Status" />

                <TextView
                    android:id="@+id/Status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_status"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMaxDate" />

                <TextView
                    android:id="@+id/textViewPhotosValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_total_photos_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewPhotos"
                    app:layout_constraintTop_toBottomOf="@+id/textViewStatusValue" />

                <TextView
                    android:id="@+id/textViewLandingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_view_landing_date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewCameraType" />

                <TextView
                    android:id="@+id/textViewEarthDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/text_view_earth_date_value"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textViewEarthDate"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageViewRoverPhoto"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_view_Rover_Photo"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRoverDescription"
                tools:src="@tools:sample/avatars[0]" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>